# slavery

./: .clang-format  .gitignore  LICENSE  README.md  annotated.html  annotated_dup.js  classes.html  config_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  errors_8h_source.html  files.html  files_dup.js  globals.html  globals_func.html  globals_type.html  hidpp_8h_source.html  index.html  libslavery.c  libslavery.h  libslavery_8h.html  libslavery_8h.js  libslavery_8h_source.html  libslavery_p.h  menudata.js  meson.build  navtreedata.js  navtreeindex0.js  slavery.c  structslavery__config__button__t.html  structslavery__config__button__t.js  structslavery__config__entry__t.html  structslavery__config__entry__t.js  structslavery__config__t.html  structslavery__config__t.js  utils_8h_source.html  virtual__input_8h_source.html
.github/workflows/: main.yml
doc/: Doxyfile  footer.html  meson.build
search/: all_0.js  all_1.js  classes_0.js  files_0.js  functions_0.js  pages_0.js  searchdata.js  typedefs_0.js
src/: button.h  config.c  config.h  device.c  device.h  errors.h  event.c  event.h  feature.h  function.h  globals.h  hidpp.c  hidpp.h  libslavery.c  libslavery.h  libslavery_p.h  meson.build  monitor.c  monitor.h  receiver.c  receiver.h  slavery.c  utils.c  utils.h  virtual_input.c  virtual_input.h
tests/: config.json  test_config.c  test_monitor.c
